添加PHP-on-Couch，用来连接cloudantDB。目前工程不报错，但还没测试是否db连接成功

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "2.*",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "php-on-couch/php-on-couch": "^2.0"
     }
 }
